--- a/package.json
+++ b/package.json
@@ -2,49 +2,50 @@
   "name": "no-name",
   "license": "UNLICENSED",
   "dependencies": {
+    "@polymer/iron-icon": "3.0.1",
+    "@polymer/iron-list": "3.0.2",
     "@polymer/polymer": "3.2.0",
-    "@vaadin/router": "^1.6.0",
     "@vaadin/flow-frontend": "./target/flow-frontend",
-    "@vaadin/vaadin-crud": "1.1.0",
-    "@vaadin/vaadin-grid": "5.5.1",
-    "@vaadin/vaadin-icons": "4.3.1",
-    "@vaadin/vaadin-split-layout": "4.1.1",
+    "@vaadin/router": "^1.6.0",
+    "@vaadin/vaadin-accordion": "1.0.1",
+    "@vaadin/vaadin-app-layout": "2.0.4",
+    "@vaadin/vaadin-board": "2.1.1",
+    "@vaadin/vaadin-button": "2.2.2",
+    "@vaadin/vaadin-charts": "6.2.4",
+    "@vaadin/vaadin-checkbox": "2.2.12",
     "@vaadin/vaadin-combo-box": "5.0.10",
+    "@vaadin/vaadin-confirm-dialog": "1.1.6",
+    "@vaadin/vaadin-context-menu": "4.3.15",
     "@vaadin/vaadin-cookie-consent": "1.1.2",
     "@vaadin/vaadin-core-shrinkwrap": "15.0.0",
-    "@vaadin/vaadin-upload": "4.2.2",
-    "@vaadin/vaadin-dialog": "2.2.1",
-    "@vaadin/vaadin-select": "2.1.7",
-    "@vaadin/vaadin-app-layout": "2.0.4",
-    "@vaadin/vaadin-item": "2.1.1",
-    "@vaadin/vaadin-board": "2.1.1",
-    "@vaadin/vaadin-notification": "1.4.0",
-    "@vaadin/vaadin-charts": "6.2.4",
-    "@vaadin/vaadin-grid-pro": "2.0.6",
-    "@vaadin/vaadin-progress-bar": "1.1.2",
-    "@vaadin/vaadin-shrinkwrap": "15.0.0",
-    "@vaadin/vaadin-ordered-layout": "1.1.0",
-    "@vaadin/vaadin-login": "1.0.1",
-    "@vaadin/vaadin-button": "2.2.2",
+    "@vaadin/vaadin-crud": "1.1.0",
+    "@vaadin/vaadin-custom-field": "1.0.11",
     "@vaadin/vaadin-date-picker": "4.0.7",
-    "@vaadin/vaadin-text-field": "2.5.4",
-    "@vaadin/vaadin-menu-bar": "1.0.5",
-    "@vaadin/vaadin-form-layout": "2.1.7",
-    "@vaadin/vaadin-accordion": "1.0.1",
-    "@polymer/iron-list": "3.0.2",
-    "@vaadin/vaadin-confirm-dialog": "1.1.6",
-    "@vaadin/vaadin-list-box": "1.2.0",
-    "@vaadin/vaadin-checkbox": "2.2.12",
     "@vaadin/vaadin-details": "1.0.1",
-    "@polymer/iron-icon": "3.0.1",
-    "@vaadin/vaadin-time-picker": "2.0.6",
-    "@vaadin/vaadin-context-menu": "4.3.15",
-    "@vaadin/vaadin-tabs": "3.0.5",
-    "@vaadin/vaadin-radio-button": "1.2.4",
+    "@vaadin/vaadin-dialog": "2.2.1",
+    "@vaadin/vaadin-form-layout": "2.1.7",
+    "@vaadin/vaadin-grid": "5.5.1",
+    "@vaadin/vaadin-grid-pro": "2.0.6",
+    "@vaadin/vaadin-icons": "4.3.1",
+    "@vaadin/vaadin-item": "2.1.1",
+    "@vaadin/vaadin-list-box": "1.2.0",
+    "@vaadin/vaadin-login": "1.0.1",
     "@vaadin/vaadin-lumo-styles": "1.5.0",
     "@vaadin/vaadin-material-styles": "1.2.3",
+    "@vaadin/vaadin-menu-bar": "1.0.5",
+    "@vaadin/vaadin-notification": "1.4.0",
+    "@vaadin/vaadin-ordered-layout": "1.1.0",
+    "@vaadin/vaadin-progress-bar": "1.1.2",
+    "@vaadin/vaadin-radio-button": "1.2.4",
     "@vaadin/vaadin-rich-text-editor": "1.1.1",
-    "@vaadin/vaadin-custom-field": "1.0.11"
+    "@vaadin/vaadin-select": "2.1.7",
+    "@vaadin/vaadin-shrinkwrap": "15.0.0",
+    "@vaadin/vaadin-split-layout": "4.1.1",
+    "@vaadin/vaadin-tabs": "3.0.5",
+    "@vaadin/vaadin-text-field": "2.5.4",
+    "@vaadin/vaadin-time-picker": "2.0.6",
+    "@vaadin/vaadin-upload": "4.2.2",
+    "lit-element": "^2.2.1"
   },
   "devDependencies": {
     "webpack": "4.30.0",
@@ -121,6 +122,6 @@
       "webpack-merge": "4.2.2",
       "webpack-dev-server": "3.9.0"
     },
-    "hash": "537490798f7364fc91c7d24aac9c7e1eba1179f7592aae44e375ecc8895d8593"
+    "hash": "a5bf2a6668f23328d345469b6ac6845411359e5d72371a5d5201d5eb664c0d13"
   }
 }
