--- a/package.json
+++ b/package.json
@@ -7,45 +7,46 @@
     "@polymer/polymer": "3.2.0",
     "@vaadin/flow-frontend": "./target/flow-frontend",
     "@vaadin/router": "^1.6.0",
-    "@vaadin/vaadin-accordion": "1.0.1",
-    "@vaadin/vaadin-app-layout": "2.0.4",
+    "@vaadin/vaadin-accordion": "1.1.0-alpha1",
+    "@vaadin/vaadin-app-layout": "2.1.0-alpha1",
     "@vaadin/vaadin-board": "2.1.1",
-    "@vaadin/vaadin-button": "2.2.2",
+    "@vaadin/vaadin-button": "2.3.0-alpha1",
     "@vaadin/vaadin-charts": "6.2.4",
-    "@vaadin/vaadin-checkbox": "2.2.13",
-    "@vaadin/vaadin-combo-box": "5.0.11",
-    "@vaadin/vaadin-confirm-dialog": "1.1.6",
-    "@vaadin/vaadin-context-menu": "4.3.15",
+    "@vaadin/vaadin-checkbox": "2.3.0-alpha1",
+    "@vaadin/vaadin-combo-box": "5.1.0-alpha1",
+    "@vaadin/vaadin-confirm-dialog": "1.2.0-alpha3",
+    "@vaadin/vaadin-context-menu": "4.4.0-alpha1",
     "@vaadin/vaadin-cookie-consent": "1.1.2",
-    "@vaadin/vaadin-core-shrinkwrap": "15.0.5",
-    "@vaadin/vaadin-crud": "1.1.0",
-    "@vaadin/vaadin-custom-field": "1.0.11",
-    "@vaadin/vaadin-date-picker": "4.0.8",
-    "@vaadin/vaadin-details": "1.0.1",
-    "@vaadin/vaadin-dialog": "2.2.1",
-    "@vaadin/vaadin-form-layout": "2.1.7",
-    "@vaadin/vaadin-grid": "5.5.1",
-    "@vaadin/vaadin-grid-pro": "2.0.7",
+    "@vaadin/vaadin-core-shrinkwrap": "16.0.0-alpha3",
+    "@vaadin/vaadin-crud": "1.2.0-alpha1",
+    "@vaadin/vaadin-custom-field": "1.1.0-alpha1",
+    "@vaadin/vaadin-date-picker": "4.1.0-alpha1",
+    "@vaadin/vaadin-details": "1.1.0-alpha1",
+    "@vaadin/vaadin-dialog": "2.4.0-alpha1",
+    "@vaadin/vaadin-form-layout": "2.2.0-alpha1",
+    "@vaadin/vaadin-grid": "5.6.0-alpha3",
+    "@vaadin/vaadin-grid-pro": "2.1.0-alpha1",
     "@vaadin/vaadin-icons": "4.3.1",
-    "@vaadin/vaadin-item": "2.1.1",
-    "@vaadin/vaadin-list-box": "1.2.0",
-    "@vaadin/vaadin-login": "1.0.1",
-    "@vaadin/vaadin-lumo-styles": "1.5.0",
-    "@vaadin/vaadin-material-styles": "1.2.3",
-    "@vaadin/vaadin-menu-bar": "1.0.5",
-    "@vaadin/vaadin-notification": "1.4.0",
-    "@vaadin/vaadin-ordered-layout": "1.1.0",
-    "@vaadin/vaadin-progress-bar": "1.1.2",
-    "@vaadin/vaadin-radio-button": "1.2.6",
-    "@vaadin/vaadin-rich-text-editor": "1.1.1",
-    "@vaadin/vaadin-select": "2.1.7",
-    "@vaadin/vaadin-shrinkwrap": "15.0.5",
-    "@vaadin/vaadin-split-layout": "4.1.1",
-    "@vaadin/vaadin-tabs": "3.0.5",
-    "@vaadin/vaadin-text-field": "2.5.5",
-    "@vaadin/vaadin-time-picker": "2.0.7",
-    "@vaadin/vaadin-upload": "4.2.2",
-    "lit-element": "^2.2.1"
+    "@vaadin/vaadin-item": "2.2.0-alpha1",
+    "@vaadin/vaadin-list-box": "1.3.0-alpha3",
+    "@vaadin/vaadin-login": "1.1.0-alpha1",
+    "@vaadin/vaadin-lumo-styles": "1.6.0",
+    "@vaadin/vaadin-material-styles": "1.3.2",
+    "@vaadin/vaadin-menu-bar": "1.1.0-alpha1",
+    "@vaadin/vaadin-notification": "1.5.0-alpha1",
+    "@vaadin/vaadin-ordered-layout": "1.3.0-alpha1",
+    "@vaadin/vaadin-progress-bar": "1.2.0-alpha1",
+    "@vaadin/vaadin-radio-button": "1.3.0-alpha1",
+    "@vaadin/vaadin-rich-text-editor": "1.2.0-alpha1",
+    "@vaadin/vaadin-select": "2.2.0-alpha1",
+    "@vaadin/vaadin-shrinkwrap": "16.0.0-alpha3",
+    "@vaadin/vaadin-split-layout": "4.2.0-alpha1",
+    "@vaadin/vaadin-tabs": "3.1.0-alpha1",
+    "@vaadin/vaadin-text-field": "2.6.0-alpha4",
+    "@vaadin/vaadin-time-picker": "2.1.0-alpha2",
+    "@vaadin/vaadin-upload": "4.3.0-alpha1",
+    "lit-element": "^2.2.1",
+    "@vaadin/vaadin-date-time-picker": "1.1.0-alpha1"
   },
   "devDependencies": {
     "webpack": "4.42.0",
@@ -61,53 +62,55 @@
     "awesome-typescript-loader": "5.2.1",
     "typescript": "3.8.3",
     "terser": "4.6.7",
-    "progress-webpack-plugin": "0.0.24"
+    "progress-webpack-plugin": "0.0.24",
+    "lit-element": "2.3.1"
   },
   "vaadin": {
     "dependencies": {
       "@vaadin/router": "^1.6.0",
       "@polymer/polymer": "3.2.0",
       "@webcomponents/webcomponentsjs": "^2.2.10",
-      "@vaadin/vaadin-crud": "1.1.0",
-      "@vaadin/vaadin-grid": "5.5.1",
+      "@vaadin/vaadin-crud": "1.2.0-alpha1",
+      "@vaadin/vaadin-grid": "5.6.0-alpha3",
       "@vaadin/vaadin-icons": "4.3.1",
-      "@vaadin/vaadin-split-layout": "4.1.1",
-      "@vaadin/vaadin-combo-box": "5.0.11",
+      "@vaadin/vaadin-split-layout": "4.2.0-alpha1",
+      "@vaadin/vaadin-combo-box": "5.1.0-alpha1",
       "@vaadin/vaadin-cookie-consent": "1.1.2",
-      "@vaadin/vaadin-core-shrinkwrap": "15.0.5",
-      "@vaadin/vaadin-upload": "4.2.2",
-      "@vaadin/vaadin-dialog": "2.2.1",
-      "@vaadin/vaadin-select": "2.1.7",
-      "@vaadin/vaadin-app-layout": "2.0.4",
-      "@vaadin/vaadin-item": "2.1.1",
+      "@vaadin/vaadin-core-shrinkwrap": "16.0.0-alpha3",
+      "@vaadin/vaadin-upload": "4.3.0-alpha1",
+      "@vaadin/vaadin-dialog": "2.4.0-alpha1",
+      "@vaadin/vaadin-select": "2.2.0-alpha1",
+      "@vaadin/vaadin-app-layout": "2.1.0-alpha1",
+      "@vaadin/vaadin-item": "2.2.0-alpha1",
       "@vaadin/vaadin-board": "2.1.1",
-      "@vaadin/vaadin-notification": "1.4.0",
+      "@vaadin/vaadin-notification": "1.5.0-alpha1",
       "@vaadin/vaadin-charts": "6.2.4",
-      "@vaadin/vaadin-grid-pro": "2.0.7",
-      "@vaadin/vaadin-progress-bar": "1.1.2",
-      "@vaadin/vaadin-shrinkwrap": "15.0.5",
-      "@vaadin/vaadin-ordered-layout": "1.1.0",
-      "@vaadin/vaadin-login": "1.0.1",
-      "@vaadin/vaadin-button": "2.2.2",
-      "@vaadin/vaadin-date-picker": "4.0.8",
-      "@vaadin/vaadin-text-field": "2.5.5",
-      "@vaadin/vaadin-menu-bar": "1.0.5",
-      "@vaadin/vaadin-form-layout": "2.1.7",
-      "@vaadin/vaadin-accordion": "1.0.1",
+      "@vaadin/vaadin-grid-pro": "2.1.0-alpha1",
+      "@vaadin/vaadin-progress-bar": "1.2.0-alpha1",
+      "@vaadin/vaadin-shrinkwrap": "16.0.0-alpha3",
+      "@vaadin/vaadin-ordered-layout": "1.3.0-alpha1",
+      "@vaadin/vaadin-login": "1.1.0-alpha1",
+      "@vaadin/vaadin-button": "2.3.0-alpha1",
+      "@vaadin/vaadin-date-picker": "4.1.0-alpha1",
+      "@vaadin/vaadin-text-field": "2.6.0-alpha4",
+      "@vaadin/vaadin-menu-bar": "1.1.0-alpha1",
+      "@vaadin/vaadin-form-layout": "2.2.0-alpha1",
+      "@vaadin/vaadin-accordion": "1.1.0-alpha1",
       "@polymer/iron-list": "3.0.2",
-      "@vaadin/vaadin-confirm-dialog": "1.1.6",
-      "@vaadin/vaadin-list-box": "1.2.0",
-      "@vaadin/vaadin-checkbox": "2.2.13",
-      "@vaadin/vaadin-details": "1.0.1",
+      "@vaadin/vaadin-confirm-dialog": "1.2.0-alpha3",
+      "@vaadin/vaadin-list-box": "1.3.0-alpha3",
+      "@vaadin/vaadin-checkbox": "2.3.0-alpha1",
+      "@vaadin/vaadin-details": "1.1.0-alpha1",
       "@polymer/iron-icon": "3.0.1",
-      "@vaadin/vaadin-time-picker": "2.0.7",
-      "@vaadin/vaadin-context-menu": "4.3.15",
-      "@vaadin/vaadin-tabs": "3.0.5",
-      "@vaadin/vaadin-radio-button": "1.2.6",
-      "@vaadin/vaadin-lumo-styles": "1.5.0",
-      "@vaadin/vaadin-material-styles": "1.2.3",
-      "@vaadin/vaadin-rich-text-editor": "1.1.1",
-      "@vaadin/vaadin-custom-field": "1.0.11"
+      "@vaadin/vaadin-time-picker": "2.1.0-alpha2",
+      "@vaadin/vaadin-context-menu": "4.4.0-alpha1",
+      "@vaadin/vaadin-tabs": "3.1.0-alpha1",
+      "@vaadin/vaadin-radio-button": "1.3.0-alpha1",
+      "@vaadin/vaadin-lumo-styles": "1.6.0",
+      "@vaadin/vaadin-material-styles": "1.3.2",
+      "@vaadin/vaadin-rich-text-editor": "1.2.0-alpha1",
+      "@vaadin/vaadin-custom-field": "1.1.0-alpha1",
+      "@vaadin/vaadin-date-time-picker": "1.1.0-alpha1"
     },
     "devDependencies": {
       "webpack-babel-multi-target-plugin": "2.3.3",
@@ -123,8 +126,9 @@
       "webpack-merge": "4.2.2",
       "webpack-dev-server": "3.10.3",
       "terser": "4.6.7",
-      "progress-webpack-plugin": "0.0.24"
+      "progress-webpack-plugin": "0.0.24",
+      "lit-element": "2.3.1"
     },
-    "hash": "07f789bb2910512a6e75b0f713977cfbcc47fe659ea63dc20ba493d31d2b43bf"
+    "hash": "677117860532305d7d17477d165ce461b255961a56df03dddf9e6c12c926867e"
   }
 }
