--- a/package.json
+++ b/package.json
@@ -7,46 +7,47 @@
     "@polymer/polymer": "3.2.0",
     "@vaadin/flow-frontend": "./target/flow-frontend",
     "@vaadin/router": "1.7.2",
-    "@vaadin/vaadin-accordion": "1.1.0",
-    "@vaadin/vaadin-app-layout": "2.1.0",
-    "@vaadin/vaadin-board": "2.1.1",
-    "@vaadin/vaadin-button": "2.3.0",
-    "@vaadin/vaadin-charts": "6.3.0",
-    "@vaadin/vaadin-checkbox": "2.3.0",
-    "@vaadin/vaadin-combo-box": "5.1.1",
-    "@vaadin/vaadin-confirm-dialog": "1.2.0",
-    "@vaadin/vaadin-context-menu": "4.4.0",
-    "@vaadin/vaadin-cookie-consent": "1.1.2",
-    "@vaadin/vaadin-core-shrinkwrap": "16.0.0",
-    "@vaadin/vaadin-crud": "1.2.1",
-    "@vaadin/vaadin-custom-field": "1.1.0",
-    "@vaadin/vaadin-date-picker": "4.1.1",
-    "@vaadin/vaadin-details": "1.1.0",
-    "@vaadin/vaadin-dialog": "2.4.0",
-    "@vaadin/vaadin-form-layout": "2.2.0",
-    "@vaadin/vaadin-grid": "5.6.2",
-    "@vaadin/vaadin-grid-pro": "2.1.0",
+    "@vaadin/vaadin-accordion": "1.2.0-alpha1",
+    "@vaadin/vaadin-app-layout": "2.2.0-alpha1",
+    "@vaadin/vaadin-board": "2.2.0-alpha1",
+    "@vaadin/vaadin-button": "2.4.0-alpha1",
+    "@vaadin/vaadin-charts": "7.0.0-alpha3",
+    "@vaadin/vaadin-checkbox": "2.4.0-alpha3",
+    "@vaadin/vaadin-combo-box": "5.3.0-alpha3",
+    "@vaadin/vaadin-confirm-dialog": "1.3.0-alpha1",
+    "@vaadin/vaadin-context-menu": "4.5.0-alpha1",
+    "@vaadin/vaadin-cookie-consent": "1.2.0-alpha1",
+    "@vaadin/vaadin-core-shrinkwrap": "17.0.0-alpha4",
+    "@vaadin/vaadin-crud": "1.3.0-alpha2",
+    "@vaadin/vaadin-custom-field": "1.2.0-alpha3",
+    "@vaadin/vaadin-date-picker": "4.3.0-alpha3",
+    "@vaadin/vaadin-details": "1.2.0-alpha1",
+    "@vaadin/vaadin-dialog": "2.5.0-alpha1",
+    "@vaadin/vaadin-form-layout": "2.3.0-alpha1",
+    "@vaadin/vaadin-grid": "5.7.0-alpha2",
+    "@vaadin/vaadin-grid-pro": "2.2.0-alpha1",
     "@vaadin/vaadin-icons": "4.3.1",
-    "@vaadin/vaadin-item": "2.2.0",
-    "@vaadin/vaadin-list-box": "1.3.0",
-    "@vaadin/vaadin-login": "1.1.0",
+    "@vaadin/vaadin-item": "2.3.0-alpha1",
+    "@vaadin/vaadin-list-box": "1.4.0-alpha1",
+    "@vaadin/vaadin-login": "1.2.0-alpha2",
     "@vaadin/vaadin-lumo-styles": "1.6.0",
     "@vaadin/vaadin-material-styles": "1.3.2",
-    "@vaadin/vaadin-menu-bar": "1.1.0",
-    "@vaadin/vaadin-notification": "1.5.0",
-    "@vaadin/vaadin-ordered-layout": "1.3.0",
-    "@vaadin/vaadin-progress-bar": "1.2.0",
-    "@vaadin/vaadin-radio-button": "1.3.0",
-    "@vaadin/vaadin-rich-text-editor": "1.2.0",
-    "@vaadin/vaadin-select": "2.2.0",
-    "@vaadin/vaadin-shrinkwrap": "16.0.0",
-    "@vaadin/vaadin-split-layout": "4.2.0",
-    "@vaadin/vaadin-tabs": "3.1.0",
-    "@vaadin/vaadin-text-field": "2.6.0",
-    "@vaadin/vaadin-time-picker": "2.1.1",
-    "@vaadin/vaadin-upload": "4.3.0",
-    "lit-element": "^2.2.1",
-    "@vaadin/vaadin-date-time-picker": "1.1.0"
+    "@vaadin/vaadin-menu-bar": "1.2.0-alpha1",
+    "@vaadin/vaadin-notification": "1.6.0-alpha1",
+    "@vaadin/vaadin-ordered-layout": "1.4.0-alpha1",
+    "@vaadin/vaadin-progress-bar": "1.3.0-alpha1",
+    "@vaadin/vaadin-radio-button": "1.4.0-alpha3",
+    "@vaadin/vaadin-rich-text-editor": "1.3.0-alpha1",
+    "@vaadin/vaadin-select": "2.3.0-alpha3",
+    "@vaadin/vaadin-shrinkwrap": "17.0.0-alpha4",
+    "@vaadin/vaadin-split-layout": "4.3.0-alpha1",
+    "@vaadin/vaadin-tabs": "3.2.0-alpha1",
+    "@vaadin/vaadin-text-field": "2.7.0-alpha4",
+    "@vaadin/vaadin-time-picker": "2.3.0-alpha4",
+    "@vaadin/vaadin-upload": "4.4.0-alpha1",
+    "lit-element": "2.3.1",
+    "@vaadin/vaadin-date-time-picker": "1.3.0-alpha3",
+    "@vaadin/form": "./target/flow-frontend/form"
   },
   "devDependencies": {
     "webpack": "4.42.0",
@@ -64,54 +65,58 @@
     "terser": "4.6.7",
     "progress-webpack-plugin": "0.0.24",
     "lit-element": "2.3.1",
-    "chokidar": "^3.4.0"
+    "chokidar": "^3.4.0",
+    "validator": "12.0.0",
+    "lit-html": "1.2.1",
+    "@types/validator": "10.11.3"
   },
   "vaadin": {
     "dependencies": {
       "@vaadin/router": "1.7.2",
       "@polymer/polymer": "3.2.0",
       "@webcomponents/webcomponentsjs": "^2.2.10",
-      "@vaadin/vaadin-crud": "1.2.1",
-      "@vaadin/vaadin-grid": "5.6.2",
+      "@vaadin/vaadin-crud": "1.3.0-alpha2",
+      "@vaadin/vaadin-grid": "5.7.0-alpha2",
       "@vaadin/vaadin-icons": "4.3.1",
-      "@vaadin/vaadin-split-layout": "4.2.0",
-      "@vaadin/vaadin-combo-box": "5.1.1",
-      "@vaadin/vaadin-cookie-consent": "1.1.2",
-      "@vaadin/vaadin-core-shrinkwrap": "16.0.0",
-      "@vaadin/vaadin-upload": "4.3.0",
-      "@vaadin/vaadin-dialog": "2.4.0",
-      "@vaadin/vaadin-select": "2.2.0",
-      "@vaadin/vaadin-app-layout": "2.1.0",
-      "@vaadin/vaadin-item": "2.2.0",
-      "@vaadin/vaadin-board": "2.1.1",
-      "@vaadin/vaadin-notification": "1.5.0",
-      "@vaadin/vaadin-charts": "6.3.0",
-      "@vaadin/vaadin-grid-pro": "2.1.0",
-      "@vaadin/vaadin-progress-bar": "1.2.0",
-      "@vaadin/vaadin-shrinkwrap": "16.0.0",
-      "@vaadin/vaadin-ordered-layout": "1.3.0",
-      "@vaadin/vaadin-login": "1.1.0",
-      "@vaadin/vaadin-button": "2.3.0",
-      "@vaadin/vaadin-date-picker": "4.1.1",
-      "@vaadin/vaadin-text-field": "2.6.0",
-      "@vaadin/vaadin-menu-bar": "1.1.0",
-      "@vaadin/vaadin-form-layout": "2.2.0",
-      "@vaadin/vaadin-accordion": "1.1.0",
+      "@vaadin/vaadin-split-layout": "4.3.0-alpha1",
+      "@vaadin/vaadin-combo-box": "5.3.0-alpha3",
+      "@vaadin/vaadin-cookie-consent": "1.2.0-alpha1",
+      "@vaadin/vaadin-core-shrinkwrap": "17.0.0-alpha4",
+      "@vaadin/vaadin-upload": "4.4.0-alpha1",
+      "@vaadin/vaadin-dialog": "2.5.0-alpha1",
+      "@vaadin/vaadin-select": "2.3.0-alpha3",
+      "@vaadin/vaadin-app-layout": "2.2.0-alpha1",
+      "@vaadin/vaadin-item": "2.3.0-alpha1",
+      "@vaadin/vaadin-board": "2.2.0-alpha1",
+      "@vaadin/vaadin-notification": "1.6.0-alpha1",
+      "@vaadin/vaadin-charts": "7.0.0-alpha3",
+      "@vaadin/vaadin-grid-pro": "2.2.0-alpha1",
+      "@vaadin/vaadin-progress-bar": "1.3.0-alpha1",
+      "@vaadin/vaadin-shrinkwrap": "17.0.0-alpha4",
+      "@vaadin/vaadin-ordered-layout": "1.4.0-alpha1",
+      "@vaadin/vaadin-login": "1.2.0-alpha2",
+      "@vaadin/vaadin-button": "2.4.0-alpha1",
+      "@vaadin/vaadin-date-picker": "4.3.0-alpha3",
+      "@vaadin/vaadin-text-field": "2.7.0-alpha4",
+      "@vaadin/vaadin-menu-bar": "1.2.0-alpha1",
+      "@vaadin/vaadin-form-layout": "2.3.0-alpha1",
+      "@vaadin/vaadin-accordion": "1.2.0-alpha1",
       "@polymer/iron-list": "3.0.2",
-      "@vaadin/vaadin-confirm-dialog": "1.2.0",
-      "@vaadin/vaadin-list-box": "1.3.0",
-      "@vaadin/vaadin-checkbox": "2.3.0",
-      "@vaadin/vaadin-details": "1.1.0",
+      "@vaadin/vaadin-confirm-dialog": "1.3.0-alpha1",
+      "@vaadin/vaadin-list-box": "1.4.0-alpha1",
+      "@vaadin/vaadin-checkbox": "2.4.0-alpha3",
+      "@vaadin/vaadin-details": "1.2.0-alpha1",
       "@polymer/iron-icon": "3.0.1",
-      "@vaadin/vaadin-time-picker": "2.1.1",
-      "@vaadin/vaadin-context-menu": "4.4.0",
-      "@vaadin/vaadin-tabs": "3.1.0",
-      "@vaadin/vaadin-radio-button": "1.3.0",
+      "@vaadin/vaadin-time-picker": "2.3.0-alpha4",
+      "@vaadin/vaadin-context-menu": "4.5.0-alpha1",
+      "@vaadin/vaadin-tabs": "3.2.0-alpha1",
+      "@vaadin/vaadin-radio-button": "1.4.0-alpha3",
       "@vaadin/vaadin-lumo-styles": "1.6.0",
       "@vaadin/vaadin-material-styles": "1.3.2",
-      "@vaadin/vaadin-rich-text-editor": "1.2.0",
-      "@vaadin/vaadin-custom-field": "1.1.0",
-      "@vaadin/vaadin-date-time-picker": "1.1.0"
+      "@vaadin/vaadin-rich-text-editor": "1.3.0-alpha1",
+      "@vaadin/vaadin-custom-field": "1.2.0-alpha3",
+      "@vaadin/vaadin-date-time-picker": "1.3.0-alpha3",
+      "lit-element": "2.3.1"
     },
     "devDependencies": {
       "webpack-babel-multi-target-plugin": "2.3.3",
@@ -129,8 +134,11 @@
       "terser": "4.6.7",
       "progress-webpack-plugin": "0.0.24",
       "lit-element": "2.3.1",
-      "chokidar": "^3.4.0"
+      "chokidar": "^3.4.0",
+      "validator": "12.0.0",
+      "lit-html": "1.2.1",
+      "@types/validator": "10.11.3"
     },
-    "hash": "e05ad8f9fbabc066c22f3cdefec60fb1541cc837c3ede9ba177175a65cdf2f99"
+    "hash": "7f4b19580bc0ca2edf0044ccf20cb25207e868eb404ec584518cf86ef9dbf1e7"
   }
 }
