--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "@vaadin/vaadin-confirm-dialog": "1.3.0",
     "@vaadin/vaadin-context-menu": "4.5.0",
     "@vaadin/vaadin-cookie-consent": "1.2.0",
-    "@vaadin/vaadin-core-shrinkwrap": "18.0.2",
+    "@vaadin/vaadin-core-shrinkwrap": "19.0.0-alpha1",
     "@vaadin/vaadin-crud": "1.3.0",
     "@vaadin/vaadin-custom-field": "1.3.0",
     "@vaadin/vaadin-date-picker": "4.4.1",
@@ -25,21 +25,21 @@
     "@vaadin/vaadin-dialog": "2.5.2",
     "@vaadin/vaadin-form-layout": "2.3.0",
     "@vaadin/vaadin-grid": "5.7.7",
-    "@vaadin/vaadin-grid-pro": "2.2.2",
+    "@vaadin/vaadin-grid-pro": "2.3.0-alpha1",
     "@vaadin/vaadin-icons": "4.3.2",
     "@vaadin/vaadin-item": "2.3.0",
     "@vaadin/vaadin-list-box": "1.4.0",
     "@vaadin/vaadin-login": "1.2.0",
     "@vaadin/vaadin-lumo-styles": "1.6.0",
     "@vaadin/vaadin-material-styles": "1.3.2",
-    "@vaadin/vaadin-menu-bar": "1.2.0",
+    "@vaadin/vaadin-menu-bar": "1.2.1",
     "@vaadin/vaadin-notification": "1.6.0",
     "@vaadin/vaadin-ordered-layout": "1.4.0",
     "@vaadin/vaadin-progress-bar": "1.3.0",
     "@vaadin/vaadin-radio-button": "1.5.1",
     "@vaadin/vaadin-rich-text-editor": "1.3.0",
     "@vaadin/vaadin-select": "2.4.0",
-    "@vaadin/vaadin-shrinkwrap": "18.0.2",
+    "@vaadin/vaadin-shrinkwrap": "19.0.0-alpha1",
     "@vaadin/vaadin-split-layout": "4.3.0",
     "@vaadin/vaadin-tabs": "3.2.0",
     "@vaadin/vaadin-text-field": "2.8.2",
@@ -72,7 +72,10 @@
     "@types/validator": "13.1.0",
     "css-loader": "4.2.1",
     "lit-css-loader": "0.0.4",
-    "extract-loader": "5.1.0"
+    "extract-loader": "5.1.0",
+    "file-loader": "6.1.0",
+    "loader-utils": "1.4.0",
+    "construct-style-sheets-polyfill": "2.4.2"
   },
   "vaadin": {
     "dependencies": {
@@ -85,7 +88,7 @@
       "@vaadin/vaadin-split-layout": "4.3.0",
       "@vaadin/vaadin-combo-box": "5.4.7",
       "@vaadin/vaadin-cookie-consent": "1.2.0",
-      "@vaadin/vaadin-core-shrinkwrap": "18.0.2",
+      "@vaadin/vaadin-core-shrinkwrap": "19.0.0-alpha1",
       "@vaadin/vaadin-upload": "4.4.1",
       "@vaadin/vaadin-dialog": "2.5.2",
       "@vaadin/vaadin-select": "2.4.0",
@@ -94,15 +97,15 @@
       "@vaadin/vaadin-board": "2.2.0",
       "@vaadin/vaadin-notification": "1.6.0",
       "@vaadin/vaadin-charts": "7.0.0",
-      "@vaadin/vaadin-grid-pro": "2.2.2",
+      "@vaadin/vaadin-grid-pro": "2.3.0-alpha1",
       "@vaadin/vaadin-progress-bar": "1.3.0",
-      "@vaadin/vaadin-shrinkwrap": "18.0.2",
+      "@vaadin/vaadin-shrinkwrap": "19.0.0-alpha1",
       "@vaadin/vaadin-ordered-layout": "1.4.0",
       "@vaadin/vaadin-login": "1.2.0",
       "@vaadin/vaadin-button": "2.4.0",
       "@vaadin/vaadin-date-picker": "4.4.1",
       "@vaadin/vaadin-text-field": "2.8.2",
-      "@vaadin/vaadin-menu-bar": "1.2.0",
+      "@vaadin/vaadin-menu-bar": "1.2.1",
       "@vaadin/vaadin-form-layout": "2.3.0",
       "@vaadin/vaadin-accordion": "1.2.0",
       "@polymer/iron-list": "3.1.0",
@@ -145,8 +148,11 @@
       "@types/validator": "13.1.0",
       "css-loader": "4.2.1",
       "lit-css-loader": "0.0.4",
-      "extract-loader": "5.1.0"
+      "extract-loader": "5.1.0",
+      "file-loader": "6.1.0",
+      "loader-utils": "1.4.0",
+      "construct-style-sheets-polyfill": "2.4.2"
     },
-    "hash": "336e081fb694b091085362b3dd79fb3b2c4a0d6cc670b4c58dfa38e89e3e9198"
+    "hash": "9e067cff9c4771c192a523cb29739e0932d01a6f03131e45f37adad8d99b2407"
   }
 }
