--- a/package.json
+++ b/package.json
@@ -1,110 +1,52 @@
 {
   "name": "no-name",
   "license": "UNLICENSED",
-  "dependencies": {
-    "@polymer/polymer": "3.2.0",
-    "@webcomponents/webcomponentsjs": "^2.2.10",
-    "@vaadin/vaadin-crud": "1.3.0",
-    "@vaadin/vaadin-icons": "4.3.1",
-    "@vaadin/vaadin-grid": "5.7.7",
-    "@vaadin/vaadin-split-layout": "4.3.0",
-    "@vaadin/vaadin-combo-box": "5.4.6",
-    "@vaadin/vaadin-cookie-consent": "1.2.0",
-    "@vaadin/vaadin-core-shrinkwrap": "14.4.4",
-    "@vaadin/vaadin-upload": "4.4.1",
-    "@vaadin/vaadin-dialog": "2.5.2",
-    "@vaadin/vaadin-select": "2.4.0",
-    "@vaadin/vaadin-app-layout": "2.2.0",
-    "@vaadin/vaadin-item": "2.3.0",
-    "@vaadin/vaadin-board": "2.2.0",
-    "@vaadin/vaadin-notification": "1.6.0",
-    "@vaadin/vaadin-charts": "6.3.1",
-    "@vaadin/vaadin-grid-pro": "2.2.2",
-    "@vaadin/vaadin-progress-bar": "1.3.0",
-    "@vaadin/vaadin-shrinkwrap": "14.4.4",
-    "@vaadin/vaadin-date-time-picker": "1.4.0",
-    "@vaadin/vaadin-ordered-layout": "1.4.0",
-    "@vaadin/vaadin-login": "1.2.0",
-    "@vaadin/vaadin-button": "2.4.0",
-    "@vaadin/vaadin-date-picker": "4.4.1",
-    "@vaadin/vaadin-text-field": "2.8.2",
-    "@vaadin/vaadin-menu-bar": "1.2.0",
-    "@vaadin/vaadin-custom-field": "1.3.0",
-    "@vaadin/vaadin-form-layout": "2.3.0",
-    "@polymer/iron-list": "3.1.0",
-    "@vaadin/vaadin-accordion": "1.2.0",
-    "@vaadin/vaadin-confirm-dialog": "1.3.0",
-    "@vaadin/vaadin-list-box": "1.4.0",
-    "@vaadin/vaadin-checkbox": "2.5.0",
-    "@vaadin/vaadin-details": "1.2.0",
-    "@polymer/iron-icon": "3.0.1",
-    "@vaadin/vaadin-time-picker": "2.4.0",
-    "@vaadin/vaadin-context-menu": "4.5.0",
-    "@vaadin/vaadin-tabs": "3.2.0",
-    "@vaadin/vaadin-radio-button": "1.5.1",
-    "@vaadin/vaadin-lumo-styles": "1.6.0",
-    "@vaadin/vaadin-material-styles": "1.3.2",
-    "@vaadin/vaadin-rich-text-editor": "1.3.0",
-    "lit-element": "^2.2.1"
-  },
-  "devDependencies": {
-    "webpack": "4.42.0",
-    "webpack-cli": "3.3.11",
-    "webpack-dev-server": "3.11.0",
-    "webpack-babel-multi-target-plugin": "2.3.3",
-    "copy-webpack-plugin": "5.1.2",
-    "webpack-merge": "4.2.2",
-    "raw-loader": "3.1.0",
-    "compression-webpack-plugin": "4.0.1",
-    "terser": "4.6.7",
-    "chokidar": "^3.4.0"
-  },
   "vaadin": {
     "dependencies": {
+      "lit-element": "^2.2.1",
       "@polymer/polymer": "3.2.0",
       "@webcomponents/webcomponentsjs": "^2.2.10",
       "@vaadin/vaadin-crud": "1.3.0",
-      "@vaadin/vaadin-icons": "4.3.1",
       "@vaadin/vaadin-grid": "5.7.7",
+      "@vaadin/vaadin-icons": "4.3.2",
       "@vaadin/vaadin-split-layout": "4.3.0",
-      "@vaadin/vaadin-combo-box": "5.4.6",
+      "@vaadin/vaadin-combo-box": "5.4.7",
       "@vaadin/vaadin-cookie-consent": "1.2.0",
-      "@vaadin/vaadin-core-shrinkwrap": "14.4.4",
+      "@vaadin/vaadin-core-shrinkwrap": "14.4.5",
       "@vaadin/vaadin-upload": "4.4.1",
       "@vaadin/vaadin-dialog": "2.5.2",
       "@vaadin/vaadin-select": "2.4.0",
       "@vaadin/vaadin-app-layout": "2.2.0",
       "@vaadin/vaadin-item": "2.3.0",
       "@vaadin/vaadin-board": "2.2.0",
-      "@vaadin/vaadin-notification": "1.6.0",
       "@vaadin/vaadin-charts": "6.3.1",
+      "@vaadin/vaadin-notification": "1.6.0",
       "@vaadin/vaadin-grid-pro": "2.2.2",
       "@vaadin/vaadin-progress-bar": "1.3.0",
-      "@vaadin/vaadin-shrinkwrap": "14.4.4",
+      "@vaadin/vaadin-shrinkwrap": "14.4.5",
       "@vaadin/vaadin-date-time-picker": "1.4.0",
       "@vaadin/vaadin-ordered-layout": "1.4.0",
       "@vaadin/vaadin-login": "1.2.0",
       "@vaadin/vaadin-button": "2.4.0",
       "@vaadin/vaadin-date-picker": "4.4.1",
       "@vaadin/vaadin-text-field": "2.8.2",
-      "@vaadin/vaadin-menu-bar": "1.2.0",
+      "@vaadin/vaadin-menu-bar": "1.2.1",
       "@vaadin/vaadin-custom-field": "1.3.0",
       "@vaadin/vaadin-form-layout": "2.3.0",
+      "@vaadin/vaadin-confirm-dialog": "1.3.0",
       "@polymer/iron-list": "3.1.0",
       "@vaadin/vaadin-accordion": "1.2.0",
-      "@vaadin/vaadin-confirm-dialog": "1.3.0",
       "@vaadin/vaadin-list-box": "1.4.0",
       "@vaadin/vaadin-checkbox": "2.5.0",
       "@vaadin/vaadin-details": "1.2.0",
       "@polymer/iron-icon": "3.0.1",
       "@vaadin/vaadin-time-picker": "2.4.0",
       "@vaadin/vaadin-context-menu": "4.5.0",
-      "@vaadin/vaadin-tabs": "3.2.0",
       "@vaadin/vaadin-radio-button": "1.5.1",
+      "@vaadin/vaadin-tabs": "3.2.0",
       "@vaadin/vaadin-lumo-styles": "1.6.0",
       "@vaadin/vaadin-material-styles": "1.3.2",
-      "@vaadin/vaadin-rich-text-editor": "1.3.0",
-      "lit-element": "^2.2.1"
+      "@vaadin/vaadin-rich-text-editor": "1.3.0"
     },
     "devDependencies": {
       "webpack-babel-multi-target-plugin": "2.3.3",
@@ -113,11 +55,67 @@
       "raw-loader": "3.1.0",
       "webpack-cli": "3.3.11",
       "webpack": "4.42.0",
-      "terser": "4.6.7",
+      "chokidar": "^3.4.0",
       "webpack-merge": "4.2.2",
-      "webpack-dev-server": "3.11.0",
-      "chokidar": "^3.4.0"
+      "webpack-dev-server": "3.11.0"
     },
-    "hash": "f357f43f79196423a8e053b51830b6bae0b4a6c92760c46bd59b5638edca3902"
+    "hash": "bc9c82dfb00f7b396d429bd6081421c31c59d9c1016113a4d1e4cac792a0a9ef"
+  },
+  "dependencies": {
+    "lit-element": "^2.2.1",
+    "@polymer/polymer": "3.2.0",
+    "@webcomponents/webcomponentsjs": "^2.2.10",
+    "@vaadin/vaadin-crud": "1.3.0",
+    "@vaadin/vaadin-grid": "5.7.7",
+    "@vaadin/vaadin-icons": "4.3.2",
+    "@vaadin/vaadin-split-layout": "4.3.0",
+    "@vaadin/vaadin-combo-box": "5.4.7",
+    "@vaadin/vaadin-cookie-consent": "1.2.0",
+    "@vaadin/vaadin-core-shrinkwrap": "14.4.5",
+    "@vaadin/vaadin-upload": "4.4.1",
+    "@vaadin/vaadin-dialog": "2.5.2",
+    "@vaadin/vaadin-select": "2.4.0",
+    "@vaadin/vaadin-app-layout": "2.2.0",
+    "@vaadin/vaadin-item": "2.3.0",
+    "@vaadin/vaadin-board": "2.2.0",
+    "@vaadin/vaadin-charts": "6.3.1",
+    "@vaadin/vaadin-notification": "1.6.0",
+    "@vaadin/vaadin-grid-pro": "2.2.2",
+    "@vaadin/vaadin-progress-bar": "1.3.0",
+    "@vaadin/vaadin-shrinkwrap": "14.4.5",
+    "@vaadin/vaadin-date-time-picker": "1.4.0",
+    "@vaadin/vaadin-ordered-layout": "1.4.0",
+    "@vaadin/vaadin-login": "1.2.0",
+    "@vaadin/vaadin-button": "2.4.0",
+    "@vaadin/vaadin-date-picker": "4.4.1",
+    "@vaadin/vaadin-text-field": "2.8.2",
+    "@vaadin/vaadin-menu-bar": "1.2.1",
+    "@vaadin/vaadin-custom-field": "1.3.0",
+    "@vaadin/vaadin-form-layout": "2.3.0",
+    "@vaadin/vaadin-confirm-dialog": "1.3.0",
+    "@polymer/iron-list": "3.1.0",
+    "@vaadin/vaadin-accordion": "1.2.0",
+    "@vaadin/vaadin-list-box": "1.4.0",
+    "@vaadin/vaadin-checkbox": "2.5.0",
+    "@vaadin/vaadin-details": "1.2.0",
+    "@polymer/iron-icon": "3.0.1",
+    "@vaadin/vaadin-time-picker": "2.4.0",
+    "@vaadin/vaadin-context-menu": "4.5.0",
+    "@vaadin/vaadin-radio-button": "1.5.1",
+    "@vaadin/vaadin-tabs": "3.2.0",
+    "@vaadin/vaadin-lumo-styles": "1.6.0",
+    "@vaadin/vaadin-material-styles": "1.3.2",
+    "@vaadin/vaadin-rich-text-editor": "1.3.0"
+  },
+  "devDependencies": {
+    "webpack-babel-multi-target-plugin": "2.3.3",
+    "copy-webpack-plugin": "5.1.2",
+    "compression-webpack-plugin": "4.0.1",
+    "raw-loader": "3.1.0",
+    "webpack-cli": "3.3.11",
+    "webpack": "4.42.0",
+    "chokidar": "^3.4.0",
+    "webpack-merge": "4.2.2",
+    "webpack-dev-server": "3.11.0"
   }
 }
