--- a/pom.xml
+++ b/pom.xml
@@ -10,10 +10,7 @@
     <packaging>jar</packaging>
 
     <properties>
-        <maven.compiler.source>1.8</maven.compiler.source>
-        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-
+        <java.version>11</java.version>
         <vaadin.version>19.0.0.alpha4</vaadin.version>
     </properties>
 
