--- a/pom.xml
+++ b/pom.xml
@@ -10,12 +10,8 @@
     <packaging>jar</packaging>
 
     <properties>
-        <maven.compiler.source>1.8</maven.compiler.source>
-        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-
+        <java.version>1.8</java.version>
         <vaadin.version>14.4.6</vaadin.version>
-
     </properties>
 
     <parent>
